<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/divider_1"/>

    <TextView
        android:id="@+id/item_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider_1"
        app:layout_constraintEnd_toStartOf="@+id/divider_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_1" />

    <ImageView
        android:id="@+id/item_word_down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/item_word"
        app:layout_constraintStart_toEndOf="@+id/item_word"
        app:layout_constraintTop_toTopOf="@+id/item_word" />


    <View
        android:id="@+id/divider_1"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:background="#ccc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@id/divider_2"/>

    <ImageView
        android:id="@+id/item_grammar_down_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/item_grammar"
        app:layout_constraintStart_toEndOf="@+id/item_grammar"
        app:layout_constraintTop_toTopOf="@+id/item_grammar" />

    <TextView
        android:id="@+id/item_grammar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grammar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider_1"
        app:layout_constraintTop_toTopOf="@+id/divider_1" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="#ccc"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        app:layout_constraintBottom_toTopOf="@id/item_practice_input"/>

    <EditText
        android:id="@+id/item_practice_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/prompt"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="4"
        android:scrollHorizontally="false"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_2"
        app:layout_constraintBottom_toTopOf="@+id/recycle_view"/>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_practice_input" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
